--- a/main.html
+++ b/main.html
@@ -6,10 +6,10 @@
 				background: #0000FF;
 				background: linear-gradient(to top, #0000FF 0%, #828c95 36%, #28343b 100%);
 				font-size: 16px; 
-				padding: 10px 20px; /* Поля вокруг текста */
-				color: #; /* Цвет текста */
-				border: 1px solid #333; /* Параметры рамки */
-				border-radius: 20px; /* Радиус скругления */
+				padding: 10px 20px; 
+				color: #; 
+				border: 1px solid #333; 
+				border-radius: 20px; 
 			   }
 	    </style>
 	</head>
