--- a/main.html
+++ b/main.html
@@ -13,6 +13,7 @@
 			   }
 	    </style>
 	</head>
+	<META content="text/html; charset=utf-8" http-equiv="Content-Type">
 	<body bgcolor="#FFFFFF">
 
 		<p align=center><a href = "index.html"><IMG SRC="logo.jpg"></a></p>
