--- a/main.html
+++ b/main.html
@@ -1,6 +1,7 @@
-<html>
+п»ї<html>
 	<head>
-	    <title>КР ТПР</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	    <title>РљР  РўРџР </title>
 			  <style>
 			   button {
 				background: #0000FF;
@@ -13,20 +14,20 @@
 			   }
 	    </style>
 	</head>
-	<META content="text/html; charset=utf-8" http-equiv="Content-Type">
+	
 	<body bgcolor="#FFFFFF">
 
 		<p align=center><a href = "index.html"><IMG SRC="logo.jpg"></a></p>
 
-		<p align=center> Курсовая работа по дисциплине ТПР</p>           
+		<p align=center> РљСѓСЂСЃРѕРІР°СЏ СЂР°Р±РѕС‚Р° РїРѕ РґРёСЃС†РёРїР»РёРЅРµ РўРџР </p>           
 
-		<p align=center> Выполнил: Курённых Алексей Евгеньевич - 30-308Б</p>
+		<p align=center> Р’С‹РїРѕР»РЅРёР»: РљСѓСЂС‘РЅРЅС‹С… РђР»РµРєСЃРµР№ Р•РІРіРµРЅСЊРµРІРёС‡ - 30-308Р‘</p>
 
-		<p align=center> Принял: Судаков Владимир Анатольевич - каф. 302</p>
+		<p align=center> РџСЂРёРЅСЏР»: РЎСѓРґР°РєРѕРІ Р’Р»Р°РґРёРјРёСЂ РђРЅР°С‚РѕР»СЊРµРІРёС‡ - РєР°С„. 302</p>
 		
-		<p align=center> Москва 2014</p>
+		<p align=center> РњРѕСЃРєРІР° 2014</p>
 		
-		<p align=center><a href = "index.html"><button>Запустить программу</button></a></p>
+		<p align=center><a href = "index.html"><button>Р—Р°РїСѓСЃС‚РёС‚СЊ РїСЂРѕРіСЂР°РјРјСѓ</button></a></p>
 		
 
 	</body>
